working on note.js

--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Note Taker",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Jaya Singh",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jaya4ever/note-taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jaya4ever/note-taker/issues"
+  },
+  "homepage": "https://github.com/jaya4ever/note-taker#readme"
 }
